# shortest-path

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
.github/workflows/: main.yml
data/: .Berlin_0_256.map.swp  Berlin_0_256_AStar_results.csv  Berlin_0_256_a_star_results.csv  Berlin_0_256_dijkstra_results.csv  Berlin_0_256_jps_results.csv  Berlin_0_256_test.map.scen  Berlin_0_256_test_AStar_results.csv  Berlin_0_256_test_Dijkstra_results.csv  Berlin_0_256_test_JPS_results.csv  Berlin_1_1024_AStar_results.csv  Berlin_1_1024_a_star_results.csv  Berlin_1_1024_dijkstra_results.csv  Berlin_1_1024_jps_results.csv  Boston_0_256_AStar_results.csv  Boston_0_256_Dijkstra_results.csv  Boston_0_256_JPS_results.csv  benchmark.xlsx  test.map  test.scen  test_medium.map  test_medium.map.scen  test_medium.scen  test_medium2.map  test_medium2.scen  test_medium_AStar_results.csv  test_medium_JPS_results.csv  test_medium_a_star_results.csv  test_medium_dijkstra_results.csv  test_small.map  test_small.scen  test_small2.map  test_small2.scen
documentation/: implementation.md  manual.md  project_definition.md  test_document.md  weekly_report1  weekly_report1.md  weekly_report2.md  weekly_report3.md  weekly_report4.md  weekly_report5.md  weekly_report6.md
src/: a_star.py  algorithm.py  dijkstra.py  distance.py  graph.py  index.py  input_parser.py  jps.py  map_image.py  service.py  test.py  textui.py
src/tests/: a_star_test.py  algorithm_test.py  benchmark_test.py  dijkstra_test.py  distance_test.py  empty.map  graph_test.py  index_test.py  input_parser_test.py  (+6 more)
