[tool.poetry]
name = "shortest-path"
version = "0.1.0"
description = ""
authors = ["antonlep <antonleppa@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Pillow = "^9.0.1"
invoke = "^1.7.0"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
coverage = "^6.3.2"
pylint = "^2.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
